# svlens

./: .clang-format  .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Makefile  README.md
.github/workflows/: ci.yml  docker.yml  release.yml
.omx/: metrics.json
.omx/logs/: hooks-2026-03-26.jsonl  turns-2026-03-26.jsonl
.omx/state/: hud-state.json  notify-hook-state.json  tmux-hook-state.json
bench/opentitan/: README.md  evaluate.py  fetch.sh  gen_filelist.py  run.sh  targets.yaml
docs/: cli-help.md  install.md  release.md  svlens-status.md  waiver-baselines.md
docs/design/: feature-roadmap.md
docs/plan/: svlens-implementation-plan.md  svlens-unification-spec.md
docs/releases/: v0.2.5.md  v0.2.7.md  v0.2.8.md  v0.3.0.md  v0.3.1.md  v0.3.2.md  v0.3.3.md  v0.3.4.md  v0.3.5.md  v0.3.6.md
docs/schema/: cdc_report.md  connect_report.md  metrics_report.md  svlens_summary.md
examples/styles/: lowrisc.yaml
fuzz/: CMakeLists.txt  README.md  fuzz_clock_yaml.cpp  fuzz_filelist.cpp  fuzz_sdc.cpp  fuzz_waiver.cpp
include/sv-cdccheck/: ast_utils.h  clock_tree.h  clock_yaml_parser.h  connectivity.h  crossing_detector.h  ff_classifier.h  filelist_parser.h  report_generator.h  sdc_parser.h  sync_verifier.h  types.h  waiver.h
packaging/homebrew/: README.md  svlens.rb
scripts/: package-release.sh  setup-deps.sh
src/: AnalysisEngine.cpp  AnalysisEngine.h  AnalysisResult.h  CdcCli.h  CdcRunner.cpp  CdcRunner.h  CdcRunnerUtils.cpp  CdcRunnerUtils.h  Checker.h  CheckerRunner.cpp  CheckerRunner.h  ClockResetAnalyzer.cpp  ClockResetAnalyzer.h  CommonCli.cpp  CommonCli.h  CompilationSession.cpp  CompilationSession.h  ConnCli.h  ConnRunner.cpp  ConnRunner.h  ConnRunnerUtils.cpp  ConnRunnerUtils.h  ConnectionExtractor.cpp  ConnectionExtractor.h  ConnectionFilters.cpp  ConnectionFilters.h  ConnectionGraph.h  ConventionChecker.cpp  ConventionChecker.h  CsvReport.cpp  CsvReport.h  DanglingChecker.cpp  DanglingChecker.h  DotReport.cpp  DotReport.h  ExpectChecker.cpp  ExpectChecker.h  GlobUtil.h  GraphDiff.cpp  GraphDiff.h  (+39 more)
src/cdc/: ast_utils.cpp  clock_tree.cpp  clock_yaml_parser.cpp  connectivity.cpp  crossing_detector.cpp  ff_classifier.cpp  filelist_parser.cpp  report_generator.cpp  sdc_parser.cpp  sync_verifier.cpp  waiver.cpp
src/metrics/: BaselineDiff.cpp  BaselineDiff.h  ConeAnalyzer.cpp  ConeAnalyzer.h  Normalization.cpp  Normalization.h  TransformExtractor.cpp  TransformExtractor.h  TransformGraph.h
tests/: CMakeLists.txt  TestHelpersCdc.h  TestUtils.cpp  TestUtils.h  expected_conn.yaml  test_analysis_engine.cpp  test_cdc_ast_utils.cpp  test_cdc_clock_database.cpp  test_cdc_clock_tree.cpp  test_cdc_clock_yaml.cpp  test_cdc_connectivity_crossing.cpp  test_cdc_edge_cases.cpp  test_cdc_ff_classifier.cpp  test_cdc_filelist.cpp  test_cdc_golden.sh  test_cdc_report_generator.cpp  test_cdc_runner.cpp  test_cdc_sdc_parser.cpp  test_cdc_sync_verifier.cpp  test_cdc_waiver.cpp  test_checker_runner.cpp  test_cli_parsers.cpp  test_clock_database.cpp  test_clock_reset.cpp  test_clock_tree.cpp  test_clock_yaml.cpp  test_common_cli.cpp  test_compilation_session.cpp  test_conn_runner.cpp  test_conn_runner_utils.cpp  test_connection_filters.cpp  test_connectivity_and_crossing.cpp  test_convention_checker.cpp  test_corner_cases.cpp  test_coverage_gaps.cpp  test_dangling_checker.cpp  test_dot_report.cpp  test_edge_cases.cpp  test_expect_checker.cpp  test_extractor.cpp  (+44 more)
tests/basic/: 01_no_crossing.sv  02_missing_sync.sv  04_three_ff_sync.sv  missing_sync.f
tests/cdc/: README.md
tests/cdc/basic/: 03_two_ff_sync.sv  05_comb_before_sync.sv  06_submodule_sync.sv  07_handshake_req_ack.sv  08_gray_fifo_ptr.sv  09_pulse_sync.sv  10_naming_no_false_clock.sv  11_sdc_async_groups.sdc  11_sdc_async_groups.sv  12_multi_crossing_mixed.sv  13_three_domain_chain.sv  14_single_ff_only.sv  15_bus_cdc_no_gray.sv  16_comb_between_domains.sv  17_reset_synchronizer.sv  18_internal_reset_cdc.sv  19_missing_reset_sync.sv  20_fanout_mixed_sync.sv  21_clock_mux.sv  22_two_level_submodule_sync.sv  23_packed_array_indexed.sv  24_genfor_module_sync.sv  25_nested_sync_clock_inherit.sv  26_genfor_in_wrapper_clock_inherit.sv  27_neg_ac_cdc01_proper_sync.sv  28_neg_ac_cdc02_clean_path.sv  29_neg_ac_cdc03_distinct_pairs.sv  30_neg_ac_cdc06_synced_reset.sv  31_parameter_type_genfor_sync.sv  32_neg_ac_cdc04_single_bit.sv  33_always_comb_sync_chain.sdc  33_always_comb_sync_chain.sv  34_neg_ac_cdc05_safe_mux_cell.flags  34_neg_ac_cdc05_safe_mux_cell.sv  35_neg_ac_cdc05_sdc_clock_mux.sdc  35_neg_ac_cdc05_sdc_clock_mux.sv  36_v2005_reg_port_chain.sv  37_concat_lhs_sync_chain.sv  38_neg_cross_inst_missing_2nd_stage.sv  39_macro_gated_sync.flags  (+16 more)
tests/cdc/basic/inc/: macro_sync_chain.svh
tests/cdc/golden/: 12_multi_crossing_mixed.json  13_three_domain_chain.json  20_fanout_mixed_sync.json  26_genfor_in_wrapper_clock_inherit.json  28_neg_ac_cdc02_clean_path.json  29_neg_ac_cdc03_distinct_pairs.json  33_always_comb_sync_chain.json  34_neg_ac_cdc05_safe_mux_cell.json
tests/golden/: 05_comb_before_sync.json
tests/sv/: array_instance.sv  clean_design.sv  clean_source_text.sv  clock_reset.sv  conditional_top.sv  conn_modport_width_neg.sv  conn_modport_width_pos.sv  cru_simple.sv  cru_width.sv  dangling_output.sv  deep_hierarchy.sv  filter_flags.sv  integration.sv  interface_modport.sv  lowrisc_filename_mismatch.sv  lowrisc_source_text_violations.sv  lowrisc_style_violations.sv  lowrisc_unreachable_sibling.sv  member_access_and_concat.sv  mixed_issues.sv  multi_module_soc.sv  procedural_glue.sv  type_mismatch.sv  undriven_input.sv  waiver_test.sv  width_mismatch.sv
tests/sv/metrics/: alias_only.sv  case_mux.sv  casez_mux.sv  ff_deep_pipeline.sv  ff_path.sv  for_loop.sv  function_call.sv  generate_lanes.sv  hierarchy_cone.sv  lhs_concat.sv  lhs_concat_for_loop.sv  lhs_concat_unequal.sv  mux_heavy.sv  nested_function_call.sv  nested_struct.sv  packed_struct.sv  repeated_lanes.sv  simple_cone.sv  slice_concat.sv  system_call.sv  unsupported_construct.sv
(+8 files in other folders)
